# l121343564uzzllxx

./: .gitignore  AGENTS.local.md.example  AGENTS.md  README.md  pyproject.toml  requirements.txt
benchmarks/: __init__.py  _common.py  bench_batch.py  bench_bch_syndrome.py  bench_block_width.py  bench_block_width_cache_sweep.py  bench_cache_aware.py  bench_cache_aware_selection.py  bench_candidate_testing.py  bench_code_profiles.py  bench_component_decoder_exactness.py  bench_component_loop.py  bench_decode_syndrome_accel.py  bench_density.py  bench_event_update.py  bench_exactness_certificate.py  bench_fair_baseline_throughput.py  bench_fixed_map_three_backend.py  bench_long_stream_cache_width.py  bench_optical_workloads.py  bench_planner.py  bench_round31_cache_width.py  bench_round32_cache_probe.py  bench_round32_fixed_map_antinoisy.py  bench_round32_width_antinoisy.py  bench_round33_fig3_dense_batch.py  bench_round34_multicode_syndrome.py  bench_stream.py  round32_common.py
codes/: __init__.py  bch_like.py  code_profiles.py  ebch_like.py  matrix_sources.py
decoders/: __init__.py  bdd_lut.py
docs/: bch_reference_notes.md  benchmark_semantics.md  reference_inspection_notes.md
linear_kernel/: __init__.py  block_lut.py  cache_aware_planner.py  cache_profile.py  event_update.py  matrix_utils.py  naive.py  packed_batch.py  packed_block_lut.py  planner.py  sparse_xor.py
references/: README.md
review_gpt/: 2026-06-24-correctness-backends.md  README.md  current_experiment_scale_and_literature_comparison.md  experiment_design_discussion.md  latest.md  (+49 more)
(+221 files in other folders)
